--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -58,6 +58,15 @@ body {
   background-color: white;
   padding: 10px 30px; }
 
+.div-display {
+  background-color: #6481bb;
+  font-size: 2.1em;
+  color: white;
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  border-radius: 5px; }
+
 textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:focus, .btn:active:focus {
   outline: none;
   border: 1px solid #6481bb;
@@ -85,6 +94,20 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     text-align: center;
     overflow: hidden;
     white-space: nowrap; }
+  .tabela .inactive-editable-cell span, #tabela-orcamento .inactive-editable-cell span, #tabela-pagamento .inactive-editable-cell span, .tabela .editable-cell span, #tabela-orcamento .editable-cell span, #tabela-pagamento .editable-cell span {
+    display: inherit; }
+  .tabela .inactive-editable-cell input, #tabela-orcamento .inactive-editable-cell input, #tabela-pagamento .inactive-editable-cell input, .tabela .editable-cell input, #tabela-orcamento .editable-cell input, #tabela-pagamento .editable-cell input {
+    display: none;
+    width: 100%;
+    text-align: center;
+    margin: 0; }
+  .tabela .editable-cell:hover, #tabela-orcamento .editable-cell:hover, #tabela-pagamento .editable-cell:hover {
+    padding-top: 5px;
+    padding-bottom: 4px; }
+    .tabela .editable-cell:hover span, #tabela-orcamento .editable-cell:hover span, #tabela-pagamento .editable-cell:hover span {
+      display: none; }
+    .tabela .editable-cell:hover input, #tabela-orcamento .editable-cell:hover input, #tabela-pagamento .editable-cell:hover input {
+      display: inherit; }
   .tabela tr:nth-child(odd), #tabela-orcamento tr:nth-child(odd), #tabela-pagamento tr:nth-child(odd) {
     background-color: white; }
   .tabela tr:nth-child(even), #tabela-orcamento tr:nth-child(even), #tabela-pagamento tr:nth-child(even) {
@@ -93,6 +116,80 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     background-color: #dedede;
     cursor: hand;
     cursor: pointer; }
+
+.tabela-bordered td {
+  border: 1px solid #6481bb; }
+
+.tabela-header-fixo thead, .tabela-header-fixo tbody, .tabela-header-fixo tr, .tabela-header-fixo td, .tabela-header-fixo th {
+  display: block; }
+.tabela-header-fixo thead th {
+  float: left; }
+.tabela-header-fixo thead tr {
+  padding-right: 18px; }
+.tabela-header-fixo tbody {
+  height: 225px;
+  overflow-y: scroll; }
+  .tabela-header-fixo tbody tr {
+    min-width: 700px; }
+  .tabela-header-fixo tbody td {
+    float: left; }
+.tabela-header-fixo tr:after {
+  content: ' ';
+  display: block;
+  visibility: hidden;
+  clear: both; }
+
+.meu-modal .header {
+  background-color: #6481bb;
+  height: 60px;
+  border-radius: 4px 4px 0 0;
+  color: white;
+  padding: 4px 4px 4px 10px; }
+  .meu-modal .header .title {
+    font-size: 2.5em; }
+    .meu-modal .header .title span {
+      vertical-align: -11%; }
+    .meu-modal .header .title .close {
+      font-size: .9em;
+      margin: 9px; }
+      .meu-modal .header .title .close:hover {
+        color: white; }
+.meu-modal .body {
+  height: 360px;
+  overflow-y: auto;
+  padding: 15px; }
+  .meu-modal .body h4 {
+    color: #6481bb; }
+  .meu-modal .body div {
+    padding-left: 5px;
+    padding-right: 5px; }
+  .meu-modal .body .container {
+    width: 100%; }
+.meu-modal .footer {
+  border-top: 1px solid #ccc;
+  height: 60px;
+  padding: 10px; }
+  .meu-modal .footer button {
+    width: 120px;
+    font-size: 1.2em;
+    height: 100%;
+    color: #6481bb;
+    float: right;
+    margin-left: 10px; }
+    .meu-modal .footer button span {
+      vertical-align: -10%; }
+
+#tabela-pagamento th:nth-child(1), #tabela-pagamento th:nth-child(3), #tabela-pagamento th:nth-child(4), #tabela-pagamento th:nth-child(5), #tabela-pagamento td:nth-child(1), #tabela-pagamento td:nth-child(3), #tabela-pagamento td:nth-child(4), #tabela-pagamento td:nth-child(5) {
+  width: 15%; }
+#tabela-pagamento th:nth-child(2), #tabela-pagamento td:nth-child(2) {
+  width: 30%; }
+#tabela-pagamento th:nth-child(6), #tabela-pagamento td:nth-child(6) {
+  width: 10%; }
+
+#tabela-buscar-pessoas th:nth-child(1), #tabela-buscar-pessoas td:nth-child(1) {
+  width: 20%; }
+#tabela-buscar-pessoas th:nth-child(2), #tabela-buscar-pessoas td:nth-child(2) {
+  width: 80%; }
 
 .banner {
   background-image: url("../images/logotipo.png");
@@ -299,33 +396,10 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   width: 7.5%; }
 #tabela-orcamento th:nth-child(2), #tabela-orcamento td:nth-child(2) {
   width: 40%; }
-#tabela-orcamento td:nth-child(4) span, #tabela-orcamento td:nth-child(6) span, #tabela-orcamento td:nth-child(7) span {
-  display: inherit; }
-#tabela-orcamento td:nth-child(4) input, #tabela-orcamento td:nth-child(6) input, #tabela-orcamento td:nth-child(7) input {
-  display: none;
-  width: 100%;
-  text-align: center;
-  margin: 0; }
-#tabela-orcamento td:nth-child(4):hover, #tabela-orcamento td:nth-child(6):hover, #tabela-orcamento td:nth-child(7):hover {
-  padding-top: 5px;
-  padding-bottom: 4px; }
-  #tabela-orcamento td:nth-child(4):hover span, #tabela-orcamento td:nth-child(6):hover span, #tabela-orcamento td:nth-child(7):hover span {
-    display: none; }
-  #tabela-orcamento td:nth-child(4):hover input, #tabela-orcamento td:nth-child(6):hover input, #tabela-orcamento td:nth-child(7):hover input {
-    display: inherit; }
 
 #controle-tabela-orcamento .row {
   margin-top: 0;
   margin-bottom: 0; }
-
-.display {
-  background-color: #6481bb;
-  font-size: 2.1em;
-  color: white;
-  text-align: center;
-  width: 100%;
-  height: 50px;
-  border-radius: 5px; }
 
 @-webkit-keyframes uil-default-anim {
   0% {
