--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -6,7 +6,7 @@
       <div class="head">
         <h3>Vendedor
           <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome"> &raquo; ({{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}})</span>
-          <a href="" class="limpar" title="Limpar campos" ng-click="$event.stopPropagation();"><span class="glyphicon glyphicon-erase"></span></a>
+          <a href="" class="limpar" title="Limpar campos" ng-click="orcamento.limparVendedor($event)"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.vendedor" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.vendedor" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -16,7 +16,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="number" id="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor)">
+          <input type="number" name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" press-shift-enter="orcamento.escapeVendedor()">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo(cdVendedor)"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -48,16 +48,18 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input id="CdProduto" type="text" class="form-control" aria-describedby="basic-addon2" ng-model="item.produto.codigo" press-enter="orcamento.buscaProdutoPorCodigo(item.produto.codigo)" press-shift-enter="orcamento.escapeProdutos()">
+          <input name="CdProduto" type="number" class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" ng-readonly="" press-enter="orcamento.buscaProdutoPorCodigo(cdProduto)" press-shift-enter="orcamento.escapeProdutos()">
           <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(item.produto.codigo)"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>
           </span>
         </div>
       </div>
       <div class="col-xs-5 col-sm-6">
         <div><h4>Descrição</h4></div>
         <div>
-          <input id="NmProduto" type="text" class="form-control" ng-model="item.produto.nome" press-enter="orcamento.avancar('#quantidade')" press-shift-enter="orcamento.escapeProdutos()"
+          <input name="NmProduto" type="text" class="form-control" ng-model="nmProduto" ng-readonly="" ng-blur="blurProduto()"
+                 press-enter="orcamento.avancar('quantidade')"
+                 press-shift-enter="orcamento.escapeProdutos()"
                  uib-typeahead="produto as produto.NmProduto for produto in orcamento.buscaProdutoPorDescricao($viewValue)"
                  typeahead-template-url="../partials/produtosTypeaheadPopup.html"
                  typeahead-min-length="3"
@@ -76,14 +78,14 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Quantidade</h4></div>
         <div class="input-group">
-          <input id="quantidade" type="text" class="form-control" filtro-moeda number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" press-enter="orcamento.avancar('#percent')" press-shift-enter="orcamento.escapeProdutos()">
+          <input name="quantidade" type="text" class="form-control" filtro-moeda number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" press-enter="item.quantidade <= 0 ? orcamento.limparProduto() : orcamento.addItem()" press-shift-enter="orcamento.escapeProdutos()">
           <span class="input-group-addon">{{item.produto.unidade || '(un)'}}</span>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Desconto %</h4></div>
         <div class="input-group">
-          <input id="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" press-enter="orcamento.avancar('#dinheiro')" press-shift-enter="orcamento.escapeProdutos()">
+          <input name="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" press-enter="orcamento.avancar('dinheiro')" press-shift-enter="orcamento.escapeProdutos()" readonly="true">
           <span class="input-group-addon">%</span>
         </div>
       </div>
@@ -91,7 +93,7 @@
         <div><h4>Desconto R$</h4></div>
         <div class="input-group">
           <span class="input-group-addon">R$</span>
-          <input id="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" press-enter="orcamento.addItem()" press-shift-enter="orcamento.escapeProdutos()">
+          <input name="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" press-enter="orcamento.addItem()" press-shift-enter="orcamento.escapeProdutos()" readonly="true">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -124,10 +126,10 @@
               <td>{{i.produto.codigo}}</td>
               <td>{{i.produto.nome | limitTo : 50 }}</td>
               <td>{{i.produto.unidade}}</td>
-              <td><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade"></td>
+              <td class="editable-cell"><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade"></td>
               <td>{{i.produto.preco | currency}}</td>
-              <td><span>{{i.descontoPercent | currency : ""}}%</span><input type="text" filtro-moeda number-only ng-model="i.descontoPercent" ng-change="i.setDescontoPercent(i.descontoPercent)"></td>
-              <td><span>{{i.descontoDinheiro | currency : "R$ "}}</span><input type="text" filtro-moeda number-only ng-model="i.descontoDinheiro" ng-change="i.setDescontoDinheiro(i.descontoDinheiro)"></td>
+              <td class="inactive-editable-cell"><span>{{i.descontoPercent | currency : ""}}%</span><input type="text" filtro-moeda number-only ng-model="i.descontoPercent" ng-change="i.setDescontoPercent(i.descontoPercent)"></td>
+              <td class="inactive-editable-cell"><span>{{i.descontoDinheiro | currency : "R$ "}}</span><input type="text" filtro-moeda number-only ng-model="i.descontoDinheiro" ng-change="i.setDescontoDinheiro(i.descontoDinheiro)"></td>
               <td>{{i.getTotalComDesconto() | currency: 'R$ '}}</td>
               <td>
                 <a tabindex="-1" ng-click="orcamento.removerItem(i)"><span class="glyphicon glyphicon-trash"></span></a>
@@ -144,15 +146,15 @@
       <div class="col-md-8">
         <div class="col-xs-4 col-sm-4 col-md-4">
           <div><h4>Desconto %</h4></div>
-          <div class="display">{{(orcamento.pedido.getDescontoPercentTotal() | currency : "")  || "0,00"}}%</div>
+          <div class="div-display">{{(orcamento.pedido.getDescontoPercentTotal() | currency : "")  || "0,00"}}%</div>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4">
           <div><h4>Desconto R$</h4></div>
-          <div class="display">{{orcamento.pedido.getDescontoDinheiroTotal() | currency : "R$ "}}</div>
+          <div class="div-display">{{orcamento.pedido.getDescontoDinheiroTotal() | currency : "R$ "}}</div>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4">
           <div><h4>Total do pedido</h4></div>
-          <div class="display">{{orcamento.pedido.getValorTotalComDesconto() | currency : "R$ "}}</div>
+          <div class="div-display">{{orcamento.pedido.getValorTotalComDesconto() | currency : "R$ "}}</div>
         </div>
       </div>
     </div>
@@ -165,7 +167,7 @@
       <div class="head">
         <h3>Cliente
           <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
-          <a href="" class="limpar" title="Limpar campos" ng-click="orcamento.pedido.removeCliente(); $event.stopPropagation();"><span class="glyphicon glyphicon-erase"></span></a>
+          <a href="" class="limpar" title="Limpar campos" ng-click="orcamento.limparCliente($event)"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -175,7 +177,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="number" class="form-control" id="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)" press-shift-enter="" ng-readonly="cliente.novo">
+          <input type="number" class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)" press-shift-enter="orcamento.salvar()" ng-readonly="cliente.novo">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)"><span class="glyphicon glyphicon-search"></span></button>
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()"><span class="glyphicon glyphicon-plus"></span></button>
@@ -184,52 +186,52 @@
       </div>
       <div class="col-xs-9 col-sm-9">
         <div><h4>Nome <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
-        <div id="nome-cliente">
-          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo">
+        <div>
+          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('tel-cliente')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-        <div id="tel-cliente">
-          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ng-readonly="!cliente.novo">
+        <div>
+          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('cel-cliente')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-        <div id="cel-cliente">
-          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo">
+        <div>
+          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('email-cliente')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-        <div id="email-cliente">
-          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo">
+        <div>
+          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Alguma coisa</h4></div>
-        <div id="">
+        <div>
           <input type="text" class="form-control" ng-readonly="!cliente.novo">
         </div>
       </div>
 
-      <div class="col-xs-9 col-sm-9" uib-collapse="!cliente.novo">
+      <div class="col-xs-6 col-sm-6" uib-collapse="!cliente.novo">
         <div><h4></h4></div>
         <div>
           <h5>1 Campo obrigatório</h5>
           <h5>2 Necessário ao menos uma forma de contato</h5>
         </div>
       </div>
-      <!--<div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">-->
-        <!--<div><h4></h4></div>-->
-        <!--<div>-->
-          <!--<button class="btn btn-default btn-form">Adicionar</button>-->
-        <!--</div>-->
-      <!--</div>-->
       <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
         <h4>&nbsp;</h4>
         <div>
-          <button class="btn btn-default btn-form" ng-click="cliente.novo = false; orcamento.pedido.removeCliente()">Cancelar</button>
+          <button class="btn btn-default btn-form">Cadastrar</button>
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
+        <h4>&nbsp;</h4>
+        <div>
+          <button class="btn btn-default btn-form" ng-click="cliente.novo = false; orcamento.limparCliente()">Cancelar</button>
         </div>
       </div>
 
@@ -238,7 +240,10 @@
 
   <br>
   <div class="row">
-    <div class="col-md-6"></div>
+    <div class="col-sm-6 col-md-3">
+      <!--<button class="btn-orcamento" ng-click=""><span class="glyphicon glyphicon-search"></span> Buscar</button>-->
+    </div>
+    <div class="col-md-3"></div>
     <div class="col-sm-6 col-md-3">
       <button class="btn-orcamento" ng-click="orcamento.limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
     </div>
