--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -88,6 +88,16 @@ body {
   width: 100%;
   height: 50px;
   border-radius: 5px;
+  padding: 4px;
+
+  input {
+    //border: none;
+    //background-color: $cor-principal-clara;
+    color: $cor-principal-clara;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:focus, .btn:active:focus {
@@ -131,35 +141,6 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     white-space: nowrap;
   }
 
-  .inactive-editable-cell {
-
-    span {
-      display: block;
-    }
-
-    input {
-      display: none;
-      width: 100%;
-      text-align: center;
-      margin: 0;
-    }
-  }
-
-  .editable-cell {
-    @extend .inactive-editable-cell;
-
-    &:hover {
-      padding-top: 5px;
-      padding-bottom: 4px;
-      span {
-        display: none;
-      }
-      input {
-        display: inherit;
-      }
-    }
-  }
-
   tr {
     &:nth-child(odd) {
       background-color: white;
@@ -173,6 +154,37 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
       background-color: $cor-tabela-highlight;
       //cursor: hand;
       //cursor: pointer;
+    }
+  }
+}
+
+.inactive-editable-elem {
+
+  span {
+    display: block;
+  }
+
+  input {
+    display: none;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+.editable-elem {
+  @extend .inactive-editable-elem;
+
+  &:hover {
+    padding-top: 5px;
+    padding-bottom: 4px;
+
+    span {
+      display: none;
+    }
+
+    input {
+      display: inherit;
     }
   }
 }
