--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -126,10 +126,10 @@
               <td>{{i.produto.codigo}}</td>
               <td>{{i.produto.nome | limitTo : 50 }}</td>
               <td>{{i.produto.unidade}}</td>
-              <td class="editable-cell"><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade"></td>
+              <td class="editable-elem"><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade"></td>
               <td>{{i.produto.preco | currency}}</td>
-              <td class="inactive-editable-cell"><span>{{i.descontoPercent | currency : ""}}%</span><input type="text" filtro-moeda number-only ng-model="i.descontoPercent" ng-change="i.setDescontoPercent(i.descontoPercent)"></td>
-              <td class="inactive-editable-cell"><span>{{i.descontoDinheiro | currency : "R$ "}}</span><input type="text" filtro-moeda number-only ng-model="i.descontoDinheiro" ng-change="i.setDescontoDinheiro(i.descontoDinheiro)"></td>
+              <td class="inactive-editable-elem"><span>{{i.descontoPercent | currency : ""}}%</span><input type="text" filtro-moeda number-only ng-model="i.descontoPercent" ng-change="i.setDescontoPercent(i.descontoPercent)"></td>
+              <td class="inactive-editable-elem"><span>{{i.descontoDinheiro | currency : "R$ "}}</span><input type="text" filtro-moeda number-only ng-model="i.descontoDinheiro" ng-change="i.setDescontoDinheiro(i.descontoDinheiro)"></td>
               <td>{{i.getTotalComDesconto() | currency: 'R$ '}}</td>
               <td>
                 <a tabindex="-1" ng-click="orcamento.removerItem(i)"><span class="glyphicon glyphicon-trash"></span></a>
@@ -179,8 +179,8 @@
         <div class="input-group">
           <input type="number" class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)" press-shift-enter="orcamento.salvar()" ng-readonly="cliente.novo">
           <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)"><span class="glyphicon glyphicon-search"></span></button>
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()"><span class="glyphicon glyphicon-plus"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-plus"></span></button>
           </span>
         </div>
       </div>
@@ -219,7 +219,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div ng-class="cliente.novo ? 'input-group' : ''">
-          <input name="cep" type="text" class="form-control" press-enter="orcamento.avancar('tel-cliente')" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.cep">
+          <input name="cep" type="text" class="form-control" press-enter="orcamento.buscarCEP()" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.cep">
           <span class="input-group-btn" ng-hide="!cliente.novo">
             <button class="btn btn-default" tabindex="-1" ng-click=""><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -234,7 +234,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Número</h4></div>
         <div>
-          <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.numero">
+          <input type="text" class="form-control" ng-readonly="!cliente.novo" ng-value="orcamento.pedido.cliente.endereco.numero">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
