--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -234,7 +234,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Número</h4></div>
         <div>
-          <input type="text" class="form-control" ng-readonly="!cliente.novo" ng-value="orcamento.pedido.cliente.endereco.numero">
+          <input type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -266,7 +266,7 @@
       <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
         <h4>&nbsp;</h4>
         <div>
-          <button class="btn btn-default btn-form">Cadastrar</button>
+          <button class="btn btn-default btn-form" ng-click="orcamento.cadastrarCliente()">Cadastrar</button>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
