--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,6 @@
-<div id="menu-home" class="">
+<div id="menu-home" class="" layout="row" layout-align="center center">
 
-  <div class="row">
-    <div class="col-md-12">
+    <div class="row">
       <div class="col-sm-6 col-md-4" ng-repeat="botao in botoes">
         <div class="botao-menu highlight" redireciona="{{botao.url}}">
           <div class="centerX centerY">
@@ -11,6 +10,5 @@
         </div>
       </div>
     </div>
-  </div>
 
 </div>
