--- a/app/partials/modalPagamento.html
+++ b/app/partials/modalPagamento.html
@@ -37,7 +37,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr ng-if="pagamentos.length == 0">
+              <tr ng-if="pedido.pagamentos.length == 0">
                 <td>&nbsp;<td>
                 <td>&nbsp;<td>
                 <td>&nbsp;<td>
@@ -45,7 +45,7 @@
                 <td>&nbsp;<td>
                 <td>&nbsp;<td>
               </tr>
-              <tr ng-repeat="p in pagamentos track by $index">
+              <tr ng-repeat="p in pedido.pagamentos track by $index">
                 <td>{{p.modalidade.codigo}}</td>
                 <td>{{p.modalidade.nome}}</td>
                 <td class="inactive-editable-elem"><span>{{(p.descontoPercent | currency: '') || '0,00'}}%</span><input filtro-moeda number-only type="text" ng-model="p.descontoPercent"></td>
