--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,6 +1,30 @@
 <div id="formulario-orcamento">
 
+  <!--TITULO-->
+  <div class="row card">
+    <div class="col-md-12">
+      <div class="head" style="text-align: center">
+        <h3><span class="glyphicon glyphicon-shopping-cart"></span> Novo Orçamento</h3>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="col-xs-3 col-sm-3">
+        <h4>Vendedor</h4>
+        <h5>{{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}}</h5>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <h4>Produtos</h4>
+        <h5>{{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} - Total: {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}</h5>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <h4>Cliente</h4>
+        <h5>{{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}}</h5>
+      </div>
+    </div>
+  </div>
+
   <!--VENDEDOR-->
+  <br>
   <div class="row card">
     <div id="form-vendedor" class="col-md-12" ng-init="formularios.vendedor = false" ng-click="formularios.vendedor = !formularios.vendedor; scrollTo($event);">
       <div class="head">
@@ -58,7 +82,7 @@
         <div><h4>Descrição</h4></div>
         <div>
           <input name="NmProduto" type="text" class="form-control" ng-model="nmProduto" ng-readonly="" ng-blur="blurProduto()"
-                 press-enter="orcamento.avancar('quantidade')"
+                 press-enter="orcamento.avancar('input', 'quantidade')"
                  press-shift-enter="orcamento.escapeProdutos()"
                  uib-typeahead="produto as produto.NmProduto for produto in orcamento.buscaProdutoPorDescricao($viewValue)"
                  typeahead-template-url="../partials/produtosTypeaheadPopup.html"
@@ -85,7 +109,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Desconto %</h4></div>
         <div class="input-group">
-          <input name="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" press-enter="orcamento.avancar('dinheiro')" press-shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
+          <input name="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" press-enter="orcamento.avancar('input', 'dinheiro')" press-shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
           <span class="input-group-addon">%</span>
         </div>
       </div>
@@ -187,54 +211,89 @@
       <div class="col-xs-9 col-sm-9">
         <div><h4>Nome <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('cpf')" press-shift-enter="orcamento.salvar()">
+          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('select', 'tipo')" press-shift-enter="orcamento.salvar()">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Tipo <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
+        <div>
+          <select name="tipo" class="form-control" ng-model="orcamento.pedido.cliente.tipo"  ng-disabled="!cliente.novo" press-enter="orcamento.avancar('input', orcamento.pedido.cliente.tipo === 'F' ? 'cpf' : 'cnpj')" press-shift-enter="orcamento.salvar()">
+            <option value="F">Pessoa Física</option>
+            <option value="J">Pessoa Jurídica</option>
+          </select>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>CPF <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.doc" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('tel-cliente')">
+          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" press-enter="orcamento.avancar('input', 'tel-cliente')" press-shift-enter="orcamento.salvar()">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>CNPJ <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
+        <div>
+          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'iEstadual')" press-shift-enter="orcamento.salvar()">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Inscrição Estadual <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
+        <div>
+          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'tel-cliente')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div class="input-group">
-          <span class="input-group-addon">({{orcamento.pedido.cliente.endereco.ddd || 'xx'}})</span>
-          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('cel-cliente')" press-shift-enter="orcamento.salvar()">
+          <span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>
+          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'ddd-cel-cliente')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
-        <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-        <div class="input-group">
-          <span class="input-group-addon">({{orcamento.pedido.cliente.endereco.ddd || 'xx'}})</span>
-          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('email-cliente')" press-shift-enter="orcamento.salvar()">
+        <div class="col-sm-4">
+          <div><h4>DDD </h4></div>
+            <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'cel-cliente')" press-shift-enter="orcamento.salvar()">
+        </div>
+        <div class="col-sm-8">
+          <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
+          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'email-cliente')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div>
-          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('cep')" press-shift-enter="orcamento.salvar()">
+          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'cep')" press-shift-enter="orcamento.salvar()">
         </div>
       </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
-        <div ng-class="cliente.novo ? 'input-group' : ''">
-          <input name="cep" type="text" class="form-control" press-enter="orcamento.buscarCEP()" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.cep">
+      <div class="col-xs-3 col-sm-3" style="padding: 0;">
+        <div class="col-sm-8">
+          <div><h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
+          <div ng-class="cliente.novo ? 'input-group' : ''">
+            <input name="cep" type="text" class="form-control" press-enter="orcamento.buscarCEP()" press-shift-enter="orcamento.salvar()" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.cep" ui-mask="99999-999">
           <span class="input-group-btn" ng-hide="!cliente.novo">
-            <button class="btn btn-default" tabindex="-1" ng-click=""><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP()"><span class="glyphicon glyphicon-search"></span></button>
           </span>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div><h4>UF</h4></div>
+          <div>
+            <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.uf">
+          </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-9">
-        <div><h4>Logradouro</h4></div>
-        <div>
-          <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.logradouro">
+      <div class="col-xs-12 col-sm-6" style="padding: 0">
+        <div class="col-sm-9">
+          <div><h4>Logradouro</h4></div>
+          <div>
+            <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.logradouro">
+          </div>
         </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Número</h4></div>
-        <div>
-          <input type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero">
+        <div class="col-sm-3">
+          <!--NUMERO-->
+          <div><h4>&#8470; <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
+          <div>
+            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero">
+          </div>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -249,12 +308,7 @@
           <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.cidade">
         </div>
       </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>UF</h4></div>
-        <div>
-          <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.uf">
-        </div>
-      </div>
+
 
       <div class="col-xs-6 col-sm-6" uib-collapse="!cliente.novo">
         <div><h4></h4></div>
@@ -282,14 +336,16 @@
   <br>
   <div class="row">
     <div class="col-sm-6 col-md-3">
-      <!--<button class="btn-orcamento" ng-click=""><span class="glyphicon glyphicon-search"></span> Buscar</button>-->
+      <button class="btn-orcamento" ng-click=""><span class="glyphicon glyphicon-list-alt"></span> Lista</button>
     </div>
-    <div class="col-md-3"></div>
     <div class="col-sm-6 col-md-3">
-      <button class="btn-orcamento" ng-click="orcamento.limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
+      <!--<button class="btn-orcamento" ng-click=""><span class="glyphicon glyphicon-trash"></span> Excluir</button>-->
     </div>
     <div class="col-sm-6 col-md-3">
       <button class="btn-orcamento" ng-click="orcamento.salvar()"><span class="glyphicon glyphicon-floppy-disk"></span> Salvar</button>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <button class="btn-orcamento" ng-click="orcamento.limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
     </div>
   </div>
 
