--- a/app/partials/modalBuscarEndereco.html
+++ b/app/partials/modalBuscarEndereco.html
@@ -8,21 +8,23 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <div><h4>Código</h4></div>
+        <div class="col-md-3">
+          <div><h4>CEP</h4></div>
           <div class="input-group">
-            <input type="number" class="form-control" name="cdEndereco" aria-describedby="basic-addon2" ng-model="cdEndereco" press-enter="buscarPorCEP(cdEndereco)">
+            <input type="text" class="form-control" name="cdEndereco" aria-describedby="basic-addon2" ng-model="cdEndereco" ui-mask="99999-999" press-enter="buscarPorCEP(cdEndereco)">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="buscarPorCEP(cdEndereco)"><span class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
         </div>
-        <div class="col-md-8">
-          <div><h4>Nome</h4></div>
+        <div class="col-md-9">
+          <div><h4>Logradouro</h4></div>
           <div class="input-group">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" ng-model="logradouro" press-enter="avancar()" placeholder="Ex. Rua Francisco Sá">
+            <span class="input-group-addon">em</span>
+            <input type="text" name="cidade" class="form-control" ng-model="cidade" press-enter="buscarPorLogradouro(logradouro, cidade)" placeholder="Ex. Rio de Janeiro">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-search"></span></button>
+              <button class="btn btn-default" ng-click="buscarPorLogradouro(logradouro)" tabindex="-1"><span class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
         </div>
