--- a/app/partials/modalPagamento.html
+++ b/app/partials/modalPagamento.html
@@ -11,15 +11,15 @@
         <div class="col-md-4">
           <div><h4>Código</h4></div>
           <div class="input-group">
-            <input type="number" class="form-control" ng-model="cdModalidade" aria-describedby="basic-addon2" press-enter="buscarModalidadePorCodigo(cdModalidade)" ng-readonly="restante() <= 0">
+            <input type="text" name="codigo" class="form-control" ng-model="cdModalidade" ng-blur="blurCodigo()" number-only aria-describedby="basic-addon2" press-enter="buscarModalidadePorCodigo()">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarModalidadePorCodigo(cdModalidade)"><span class="glyphicon glyphicon-search"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarModalidadePorCodigo()"><span class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-8">
           <div><h4>Modalidade</h4></div>
-          <input type="text" readonly="true" class="form-control">
+          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" class="form-control" press-enter="addModalidade()">
         </div>
       </div>
       <br>
