--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -10,7 +10,8 @@
     <div class="col-md-12">
       <div class="col-xs-3 col-sm-3">
         <h4>Vendedor</h4>
-        <h5>{{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}}</h5>
+        <h5 ng-show="orcamento.pedido.vendedor.codigo">{{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}}</h5>
+        <h5 ng-hide="orcamento.pedido.vendedor.codigo">(Nenhum vendedor)</h5>
       </div>
       <div class="col-xs-3 col-sm-3">
         <h4>Produtos</h4>
@@ -18,7 +19,13 @@
       </div>
       <div class="col-xs-3 col-sm-3">
         <h4>Cliente</h4>
-        <h5>{{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}}</h5>
+        <h5 ng-show="orcamento.pedido.cliente.codigo">{{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}}</h5>
+        <h5 ng-hide="orcamento.pedido.cliente.codigo">(Nenhum cliente)</h5>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <h4>Pagamento</h4>
+        <h5 ng-show="orcamento.pedido.pagamentos.length">xxxxxxxx</h5>
+        <h5 ng-hide="orcamento.pedido.pagamentos.length">(Nenhuma forma de pagamento)</h5>
       </div>
     </div>
   </div>
@@ -40,7 +47,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="number" name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" press-shift-enter="orcamento.escapeVendedor()">
+          <input type="text" number-only name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" press-shift-enter="orcamento.escapeVendedor()">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo(cdVendedor)"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -72,7 +79,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input name="CdProduto" type="number" class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" ng-readonly="" press-enter="orcamento.buscaProdutoPorCodigo(cdProduto)" press-shift-enter="orcamento.escapeProdutos()">
+          <input name="CdProduto" type="text" number-only class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" ng-readonly="" press-enter="orcamento.buscaProdutoPorCodigo(cdProduto)" press-shift-enter="orcamento.escapeProdutos()">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -85,7 +92,7 @@
                  press-enter="orcamento.avancar('input', 'quantidade')"
                  press-shift-enter="orcamento.escapeProdutos()"
                  uib-typeahead="produto as produto.NmProduto for produto in orcamento.buscaProdutoPorDescricao($viewValue)"
-                 typeahead-template-url="../partials/produtosTypeaheadPopup.html"
+                 typeahead-template-url="partials/produtosTypeaheadPopup.html"
                  typeahead-min-length="3"
                  typeahead-loading="isLoading"
                  typeahead-wait-ms="100"
@@ -201,7 +208,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="number" class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)" press-shift-enter="orcamento.salvar()" ng-readonly="cliente.novo" maxlength="6">
+          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)" press-shift-enter="orcamento.salvar()" ng-readonly="cliente.novo" maxlength="6">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-plus"></span></button>
@@ -226,49 +233,26 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>CPF <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" press-enter="orcamento.avancar('input', 'tel-cliente')" press-shift-enter="orcamento.salvar()">
+          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" press-enter="orcamento.avancar('input', 'cep')" press-shift-enter="orcamento.salvar()" ng-change="onchangeCPF()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>CNPJ <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'iEstadual')" press-shift-enter="orcamento.salvar()">
+          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'iEstadual')" press-shift-enter="orcamento.salvar()" ng-change="onchangeCNPJ()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Inscrição Estadual <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'tel-cliente')" press-shift-enter="orcamento.salvar()" maxlength="20">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-        <div class="input-group">
-          <span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>
-          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'ddd-cel-cliente')" press-shift-enter="orcamento.salvar()">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div class="col-sm-4">
-          <div><h4>DDD </h4></div>
-            <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'cel-cliente')" press-shift-enter="orcamento.salvar()">
-        </div>
-        <div class="col-sm-8">
-          <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'email-cliente')" press-shift-enter="orcamento.salvar()">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-        <div>
-          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'cep')" press-shift-enter="orcamento.salvar()" maxlength="50">
+          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'cep')" press-shift-enter="orcamento.salvar()" maxlength="20">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3" style="padding: 0;">
         <div class="col-sm-8">
           <div><h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
           <div ng-class="cliente.novo ? 'input-group' : ''">
-            <input name="cep" type="text" class="form-control" press-enter="orcamento.buscarCEP()" press-shift-enter="orcamento.salvar()" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.cep" ui-mask="99999-999">
+            <input name="cep" type="text" class="form-control" press-enter="cdCEP == orcamento.pedido.cliente.endereco.cep ? orcamento.avancar('input', 'endNumero') : orcamento.buscarCEP()" press-shift-enter="orcamento.salvar()" ng-readonly="!cliente.novo" ng-model="cdCEP" ui-mask="99999-999" ng-blur="blurCdCEP()">
           <span class="input-group-btn" ng-hide="!cliente.novo">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP()"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -292,7 +276,7 @@
           <!--NUMERO-->
           <div><h4>&#8470; <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
           <div>
-            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero" maxlength="10">
+            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero" press-enter="orcamento.avancar('input', 'tel-cliente')" press-shift-enter="orcamento.salvar()" maxlength="10">
           </div>
         </div>
       </div>
@@ -306,6 +290,29 @@
         <div><h4>Cidade</h4></div>
         <div>
           <input type="text" class="form-control" ng-readonly="true" ng-value="orcamento.pedido.cliente.endereco.cidade">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
+        <div class="input-group">
+          <span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>
+          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'ddd-cel-cliente')" press-shift-enter="orcamento.salvar()">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div class="col-sm-4">
+          <div><h4>DDD </h4></div>
+          <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'cel-cliente')" press-shift-enter="orcamento.salvar()">
+        </div>
+        <div class="col-sm-8">
+          <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
+          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'email-cliente')" press-shift-enter="orcamento.salvar()">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
+        <div>
+          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" press-enter="" press-shift-enter="orcamento.salvar()" maxlength="50">
         </div>
       </div>
 
