--- a/app/partials/modalPagamento.html
+++ b/app/partials/modalPagamento.html
@@ -11,7 +11,7 @@
         <div class="col-md-4">
           <div><h4>Código</h4></div>
           <div class="input-group">
-            <input type="text" name="codigo" class="form-control" ng-model="cdModalidade" ng-blur="blurCodigo()" number-only aria-describedby="basic-addon2" press-enter="buscarModalidadePorCodigo()">
+            <input type="text" name="codigo" class="form-control" ng-model="cdModalidade" ng-blur="blurCodigo()" number-only aria-describedby="basic-addon2" press-enter="buscarModalidadePorCodigo()" ng-readonly="troco() >= 0">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="buscarModalidadePorCodigo()"><span class="glyphicon glyphicon-search"></span></button>
             </span>
@@ -19,7 +19,7 @@
         </div>
         <div class="col-md-8">
           <div><h4>Modalidade</h4></div>
-          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" class="form-control" press-enter="addModalidade()">
+          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" class="form-control" press-enter="addModalidade()" ng-readonly="troco() >= 0">
         </div>
       </div>
       <br>
