--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -53,8 +53,7 @@ body {
   -o-transition: background-color 0.5s ease;
   transition: background-color 0.5s ease;
   background-color: #29487d;
-  cursor: pointer;
-  cursor: hand; }
+  cursor: pointer; }
 
 .sombra, .card, .navbar-default, .botao-menu, #formulario-orcamento .btn-orcamento {
   -webkit-box-shadow: 0px 2px 4px #999;
@@ -64,6 +63,16 @@ body {
 .card {
   background-color: white;
   padding: 10px 30px; }
+
+.alerta {
+  position: fixed;
+  height: 50px;
+  margin: 10px;
+  z-index: 100000;
+  opacity: 0;
+  -webkit-box-shadow: 0px 2px 10px #444;
+  -moz-box-shadow: 0px 2px 10px #444;
+  box-shadow: 0px 2px 10px #444; }
 
 .div-display {
   background-color: #6481bb;
