--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -75,7 +75,6 @@ body {
   transition: background-color 0.5s ease;
   background-color: $cor-highlight;
   cursor: pointer;
-  cursor: hand;
 }
 
 .sombra {
@@ -88,6 +87,17 @@ body {
   @extend .sombra;
   background-color: white;
   padding: 10px 30px;
+}
+
+.alerta {
+  position: fixed;
+  height: 50px;
+  margin: 10px;
+  z-index: 100000;
+  opacity: 0;
+  -webkit-box-shadow: 0px 2px 10px #444;
+  -moz-box-shadow: 0px 2px 10px #444;
+  box-shadow: 0px 2px 10px #444;
 }
 
 .div-display {
