--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -98,6 +98,8 @@ body {
   -webkit-box-shadow: 0px 2px 10px #444;
   -moz-box-shadow: 0px 2px 10px #444;
   box-shadow: 0px 2px 10px #444;
+  display: none;
+  pointer-events: none;
 }
 
 .div-display {
